--- a/html/about.html
+++ b/html/about.html
@@ -399,7 +399,7 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
         <div class="links">
@@ -409,9 +409,9 @@
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Lawrence Xiong</h4>
-        <h5>Director of Business Development</h5>
+        <img class="img-fluid" src="../assets/images/Ruoyang_Ni.jpeg">
+        <h4>Rose Ni</h4>
+        <h5>President</h5>
         <div class="links">
           <i class="icofont icofont-social-linkedin"></i>&nbsp;
           <i class="icofont icofont-social-facebook"></i>&nbsp;
@@ -419,54 +419,54 @@
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Lawrence Xiong</h4>
-        <h5>Director of Business Development</h5>
+        <img class="img-fluid" src="../assets/images/Yijing_Liu.jpg">
+        <h4>Dawn Liu</h4>
+        <h5>Vice President</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Yibo_Chen.jpg">
+        <h4>Yibo Chen</h4>
+        <h5>Vice President</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Lawrence Xiong</h4>
-        <h5>Director of Business Development</h5>
+        <h4>George Chen</h4>
+        <h5>Head of PR</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Zhilei Zheng</h4>
-        <h5>Technology Director</h5>
+        <h4>Appolos Liu</h4>
+        <h5>Head of Secretary</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Lawrence Xiong</h4>
-        <h5>Director of Business Development</h5>
+        <h4>Bryan Liang</h4>
+        <h5>Advisor</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Stephany_Li.jpg">
+        <h4>Stephanie Li</h4>
+        <h5>Administration Chair</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Alex_Chen.jpeg">
+        <h4>Alex Chen</h4>
+        <h5>Business Development Chair</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Menglu_Zhang.jpg">
+        <h4>Menglu Zhang</h4>
+        <h5>Finance Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Lynn Zhao</h4>
+        <h5>Marketing Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Zhilei Zheng</h4>
-        <h5>Technology Director</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Hailey Feng</h4>
+        <h5>Operations Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
@@ -489,79 +489,89 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <img class="img-fluid" src="../assets/images/Tsz_Kwan_Lam.jpg">
+        <h4>Bill Lam</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Phillip Zhang</h4>
+        <h5>Vice Chair</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/David_Chen.jpg">
+        <h4>David Chen</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Rachel Wu</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Jipeng_Liu.jpg">
+        <h4>Jipeng Liu</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Qihao Yao</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Qingrong Ji</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>William Sun</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Zhongyuan Zeng</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Samuel Kang</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Mingyu Li</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Yilin Ma</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Shiqi Chen</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Marianne Xiong</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Juliette Zhu</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Michael Li</h4>
+        <h5>Senior Advisor</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 2</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Lawrence Lu</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
