--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -212,7 +212,7 @@
 
     <div class="section-full header" id="section-0">
       <div class="left-square"></div>
-      <div class="sub-title">April.13th - 15th<br/>University of Pennsylvania</div>
+      <div class="sub-title">4月13日-15日<br/>宾夕法尼亚大学</div>
       <div class="vertical-sub-title mobile-hide">
         A Summit that builds the bridge between us
       </div>
@@ -220,7 +220,7 @@
         To Build the Bridge Between Us
       </div>
       <div class="page-caption black-shadow">
-         SIX <br/> PANELS
+         六大 <br/> 分论坛
       </div>
       <div class="bottom-square">
         <div class="row">
@@ -238,22 +238,22 @@
     <div class="container">
       <div class="row panel-nav">
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#first-panel">Finance</a>
+          <a href="#first-panel">财经</a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#second-panel">Technology</a>
+          <a href="#second-panel">科技</a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#third-panel">I.R.</a>
+          <a href="#third-panel">国际关系</a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#fourth-panel">Real Estate</a>
+          <a href="#fourth-panel">房地产</a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#fifth-panel">Entertainment</a>
+          <a href="#fifth-panel">娱乐与时尚</a>
         </div>
         <div class="col-12 col-sm-6 col-md-2 center-txt">
-          <a href="#sixth-panel">Social</a>
+          <a href="#sixth-panel">社会责任</a>
         </div>
       </div>
     </div>
@@ -267,18 +267,18 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Finance Panel:
+                  财经版块：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>For the past decade, low real interest rates, declining productivity growth, and lack of attractive domestic investment opportunities have forced global investors to seek higher returns in less familiar territories. During this process, emerging markets, specifically China, have stood out with its rapid developments in almost all areas of the economy. </p>
-                <p>Private investment in China has been growing consistently for the past several years. As China shifts from an export-driven growth model towards a domestic consumption-driven growth model, there will be more room for global investors to participate. In addition, China is leading the globalization initiative with its “One Belt, One Road” policy, thus creating a myriad of opportunities for other world economies. Meanwhile, the government is encouraging inbound investments with favorable policies. Domestically, the rapid expansion of technology firms is supplying momentum for the world’s largest emerging market.</p>
-                <p>With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can investors prepare themselves to capitalize on the new wave of opportunities in China? What role should China play in the next generation of Globalization?</p>
+                <p>在过去10年期间，全球经济经历了一段漫长又缓慢的复苏期。以美国为首的多国央行维持多年的低利率政策以及萎靡不振的真实经济增长让全球的投资回报持续低迷。这也让大型的机构投资者逐渐将眼光投向新兴市场来寻求更高的增长。在这其中，中国以其快速的经济发展成为了最受关注的市场之一。</p>
+                <p>中国的私人投资在过去几年一直在连续增长。随着中国从出口导向的增长模式逐渐转型至以国内消费驱动的增长模式，全球投资者将有更多的参与空间。另外，中国正以“一带一路”政策引领全球化的进程，此举为其他经济体创造了无数机遇。政府积极鼓励对外投资，并配以利好政策。</p>
+                <p>全球的投资者们该如何更好的驾驭中国市场持续的监管变化、科技产业动荡、以及主要资产类别估值上升等多重因素？中国又会在新一轮全球化中占领何种地位？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 15th, 10:00am - 12:00am</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月15日, 10:00am - 12:00am</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
@@ -286,7 +286,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Speakers:
+                  嘉宾：
                 </div>
               </div>
             </div>
@@ -324,7 +324,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Technology Panel:
+                  科技板块：
                 </div>
               </div>
             </div>
@@ -358,17 +358,17 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Introduction:
+                  介绍：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>In a world of rapid technological changes, a new wave of innovation has seeped into our society and has become interwoven with our everyday lives. A technology led economy is key to helping China’s economy achieve a new norm. With the rise of big data, AI, renewable energy, and internet of things, how can traditional industries adapt and thrive? Can social networks such as Weibo replace traditional media? How can electric cars successfully break into a market filled with established players? What can we learn from Hero Entertainment’s successful entry into the gaming market? What roles will AI and big data play in this round of technology revolution?</p>
-                <p>The conference will focus on the influence cast on the traditional industries by emerging industries that are fuelled by technological innovation. At the same time, we will also explore the dynamics in between the technology firms within the innovation ecosystem. How will these new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?</p>
+                <p>当今世界，新一轮的科技革命正在孕育兴起，科技创新正加速推进，并深度融合、广泛渗透到人类社会的各个方面，成为重塑世界经济结构和竞争格局、创造人类未来的主导力量。在中国经济发展新常态下，科技创新引领的增长动力正在加快行成。站在新历史起点上的中国，明确提出将科技放在优先发展的战略地位。以互联网、大数据、人工智能、新能源等为核心的新产业、新业态不断涌现，但同时也给许多传统行业带来影响。</p>
+                <p>本次峰会的科技板块将关注以创新科技为核心的新产业对传统行业的冲击。同时，我们也将看到跨平台跨领域的科技公司之间的交流互动。他们，对我们这一代的科技发展有着怎样的展望？我们作为留学生，应该如何好把握自己的身份，抓住热门领域的发展大潮，贡献祖国贡献社会呢？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
@@ -380,17 +380,17 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  International Relations Panel:
+                  国际关系板块：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>As we are approaching a new decade, no relationship will be as important to the twenty-first century as the one between the United States, the largest developed country, and China, the largest developing country. As the world’s two foremost economic superpowers, how can United States and China avoid the “Thucydides Trap”— recurrent conflicts between the existing and rising powers. Under the present wave of globalization, could Sino-US cooperation become the new status quo? Currently, some Americans support U.S. pursuing an integrative strategy with China, as the latter continues to expand its global presence. Some others, with an alternative understanding of China and the dynamics of the world, believe that China’s strategic interests are incompatible with those of the United States. </p>
-                <p>In today's world, how do we make sense of the consensus between the two presidents and the significance of the Belt and Road initiative? From these significant summits and forums, many people, particularly the students, want to know what the takeaways are for them. What will be the impact of the Sino-US relationship on their lives? What can the 21st century students specifically contribute to help strengthen the two countries’ relationship?</p>
+                <p>在我们即将迎来的新一个十年里，没有任何一对国家间关系比中美关系更加重要。 作为世界前两大经济体、最大的发达国家和最大的发展中国家，美国和中国应如何避免重蹈过去几百年间守成大国和新兴大国跌入“修昔底德陷阱”的覆辙？在本轮全球化浪潮下，“中美合作”能否成为两个大国相处的新常态？</p>
+                <p>在佛罗里达州海湖庄园，习近平主席向特朗普总统表示，“我们有一千条理由把中美关系搞好，没有一条理由把中美关系搞坏”。两国领导人就双方在各层级、各领域加强沟通已达成许多共识。当今时代，如何理解习主席和特朗普总统的这些共识，以及“一代一路”倡议的意义？很多人，特别是学生，想了解这些重大的首脑会晤和论坛能让他们如何受益？中美关系的走向对他们的生活会有什么影响？作为21世纪的青年学生，又能在哪些方面为发展中美关系出力？</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Annenberg Center</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
@@ -398,7 +398,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Speakers:
+                  嘉宾：
                 </div>
               </div>
             </div>
@@ -436,7 +436,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Real Estate Panel:
+                  房地产板块：
                 </div>
               </div>
             </div>
@@ -470,18 +470,17 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Introduction:
+                  介绍：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>Recently, the increasing rate of Chinese real estate industry has been declining. The skyrocketing price has resulted in an exceeding supply in the market. As the transaction volume could not keep up with the pace of increasing supply, the government introduced stimulatory policies aiming to invigorate the market by trying to reduce the inventory. However, regional markets responded to such initiatives differently. While the market started rejuvenating in first-tier metropolis, markets in second or third-tier cities didn’t see as much an improvement. Facing such a stagnant market, how traditional real-estate companies should innovate became a widely-discussed issue.</p>
-                <p>Several solutions emerged in this tide of industry transformation that involves changes in the landscapes of multi-function real estate, commercial real estate, as well as both experience-based and public housing projects.</p>
-                <p>In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era? How should companies adapt based on their unique characteristics instead of blindly following the trend? What attitude and expectations does the government have about this new mode? These topics and questions are what the real estate panel will ponder upon.</p>
+                <p>近年来中国房地产投资增速持续下滑，库存不断攀升，销售增长出现疲态。政府出台一系列刺激政策，并将“去库存”列为中央经济工作会议上主要任务之一。在此背景下，一线城市房地产市场率先复苏，而二三线城市的市场表现则差强人意，城市间分化格局进一步加剧。面对当下的楼市特征，房地产行业应如何突破瓶颈，转换思维，优化盈利模式，实现房地产市场从结构到功能的根本转变，成为迫在眉睫的焦点话题。</p>
+                <p>在当下这个充满变革与机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？企业如何在众多转型方向中量体裁衣，避免盲目跟从？国家对这些新模式的兴起又持有怎样的态度与预期？本分论坛将探讨新兴房地产模式与传统房地产模式的碰撞与融合。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 12:30pm - 14:30pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 12:30pm - 14:30pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
@@ -494,17 +493,17 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Entertainment and Fashion Panel:
+                  娱乐与时尚板块：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>As the Chinese entertainment and fashion industries have matured over recent years, the integration of new media and the infusion of capital have greatly impacted their development. Chinese agencies have begun to play increasingly important roles in bringing new talents into the film and entertainment industry; at the same time, established artists continue to find ways to maximize and realize their commercial value. In short, talent-centered mode of production and new media-focused means of distribution have and will continue to disrupt Chinese entertainment. Moreover, consumer demand is also shifting. For example, Iqiyi’s reality show, “Rap of China”, was not only wildly successful, but it was also a show produced following a different line of thinking. In fashion, on the other hand, celebrities have become the “new faces” in fashion shows, advertisements and magazines covers.</p>
-                <p>In the near future, will we be witnesses to a new age of Chinese entertainment? What would already-established figures say about current Chinese fashion and entertainment? How have industry changes influenced their lines of work? What are their opinions on the impact that an increasing influx of capital has on the industry? Moreover, what do they envision for the future of the industry? These questions will be answered at the Entertainment Panel of the Penn Wharton China Summit.</p>
+                <p>中国文化娱乐产业正处在前所未有的黄金时代。随着2015年影视行业的高速发展与2016、17年票房增速减缓，尽管中国电影票房经历了“过山车式”的大起大落，中国电影正在回归质量，曾经“泡沫化”的中国电影票房也处在“返璞归真”的过程中。除此之外，中国网剧，综艺与其他新媒体相关的影视娱乐输出也处在欣欣向荣的发展中。各大娱乐内容制作与发行公司都跃跃欲试，通过大量资本注入为中国娱乐产业提出新思路。</p>
+                <p>处在转型中的中国娱乐与时尚行业的业内人士会有怎样的反应与看法？近年的行业变化对他们的职业带来了什么样的影响？他们是否真切地感受到了资本注入对娱乐与时尚带来的冲击？即将进入2.0时代的他们对未来有怎样的预期？这些问题将在沃顿中国峰会的娱乐&时尚论坛得到最好的解答。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 10:00am - 12:00am</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: Chinese</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 10:00am - 12:00am</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
               </div>
             </div>
           </div>
@@ -512,7 +511,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Speakers:
+                  嘉宾：
                 </div>
               </div>
             </div>
@@ -550,7 +549,7 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Social Responsibilities Panel:
+                  社会责任板块：
                 </div>
               </div>
             </div>
@@ -584,19 +583,16 @@
             <div class="row">
               <div class="col">
                 <div class="speakers-header">
-                  Introduction:
+                  介绍：
                 </div>
               </div>
             </div>
             <div class="row panel-desc">
               <div class="col">
-                <p>"Our generation" is not only one that excels in innovation and dares to challenge, but also a generation that assumes social responsibility while practicing sustainable development. </p>
-                <p>Today, with the transformation of China's economic structure, many social problems have started to come about, and the implementation of the national 13th five-year plan and sustainable development goals faces many opportunities and challenges. With the efforts of all the explorers and practitioners, as well as the integration of business, media, science and technology, innovation and culture, China's philanthropic industry is developing in a positive way. For enterprises, the realization of social value is as important as that of the commercial value. The public welfare element can aid the construction of enterprise brand and culture, the promotion of social influence and the transformation of strategy. For public welfare institutions, the linkage of social resources is conducive to the improvement and solution of social problems. For government and media, focusing on social issues, promoting social development, and spreading the positive energy of society have always been needed.
-                </p>
-                <p>Therefore, our panel will invite outstanding entrepreneurs to discuss the status, problems, solutions and future prospects of sustainable development and social responsibility of Chinese enterprises. </p>
+                <p>“我们这一代”不只是善于创新，敢于挑战的一代，更是勇于承担社会责任，践行可持续发展的一代。在中国经济结构转型的今天，许多社会问题逐步凸显，国家十三五规划和可持续发展目标的实施面临着诸多机遇和挑战。在各方探索者和实践者的努力，以及商业、媒体、科技、创新和文化等元素的融入之下，中国的公益慈善行业正在呈积极态势发展。对企业来讲，社会价值的实现与商业价值同样重要，公益元素可以帮助企业品牌与文化的建设、社会影响力的提升以及战略的转型；对公益机构来讲，社会各界资源的联动有利于社会问题的改善和解决；对政府和媒体来讲，关注社会议题，推动社会发展，传播社会正能量一直都是刚需。因此，本次分论坛将邀请优秀的企业家讨论中国企业可持续发展与社会责任的现状、问题、解决方案和未来展望。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
-                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; April 14th, 3:00pm - 5:00pm</p>
-                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; Language: English</p>
+                <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 3:00pm - 5:00pm</p>
+                <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：英文</p>
               </div>
             </div>
           </div>
