--- a/html/about.html
+++ b/html/about.html
@@ -388,11 +388,12 @@
   <div class="slide-container">
   <!-- These are the buttons -->
   <div class="row">
-    <div class="teamBars center-txt col-lg-2 offset-lg-1 col-sm-3 col-12" onclick="currentSlide(1)">Board</div>
+    <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(1)">Board</div>
     <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(2)">Business Development</div>
     <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(3)">Marketing</div>
     <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(4)">Operations</div>
     <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(5)">Administration</div>
+        <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(6)">Finance</div>
   </div>
   <!-- Here are the profiles -->
   <!-- Page 1 -->
@@ -403,7 +404,7 @@
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
         <div class="links">
-          <i class="icofont icofont-social-linkedin"></i>&nbsp;
+          <a><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <i class="icofont icofont-social-facebook"></i>&nbsp;
           <i class="icofont icofont-link-alt"></i>
         </div>
@@ -412,11 +413,6 @@
         <img class="img-fluid" src="../assets/images/Ruoyang_Ni.jpeg">
         <h4>Rose Ni</h4>
         <h5>President</h5>
-        <div class="links">
-          <i class="icofont icofont-social-linkedin"></i>&nbsp;
-          <i class="icofont icofont-social-facebook"></i>&nbsp;
-          <i class="icofont icofont-link-alt"></i>
-        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yijing_Liu.jpg">
@@ -429,7 +425,7 @@
         <h5>Vice President</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/George_Chen.jpg">
         <h4>George Chen</h4>
         <h5>Head of PR</h5>
       </div>
@@ -459,29 +455,14 @@
         <h5>Finance Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Lynn_Zhao.jpg">
         <h4>Lynn Zhao</h4>
         <h5>Marketing Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Hailey_Feng.jpg">
         <h4>Hailey Feng</h4>
         <h5>Operations Chair</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 1</h4>
-        <h5>Director of Nothing</h5>
       </div>
     </div>
   </div>
@@ -529,12 +510,12 @@
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Echo_Zeng.jpg">
         <h4>Zhongyuan Zeng</h4>
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Samuel_Kang.jpg">
         <h4>Samuel Kang</h4>
         <h5>Member</h5>
       </div>
@@ -544,17 +525,17 @@
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Yilin_Ma.jpg">
         <h4>Yilin Ma</h4>
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Kitty_Chen.jpg">
         <h4>Shiqi Chen</h4>
         <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Marianne_Xiong.jpg">
         <h4>Marianne Xiong</h4>
         <h5>Member</h5>
       </div>
@@ -579,79 +560,74 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
+        <h4>Zhilei Zheng</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Elaine Liu</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Ashling Sui</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Michelle Zhan</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Tracy Yan</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sai_Ma.jpg">
+        <h4>Sai Ma</h4>
+        <h5>Member</h5>
+        <div class="links">
+          <i class="icofont icofont-social-linkedin"></i>&nbsp;
+          <i class="icofont icofont-social-facebook"></i>&nbsp;
+          <i class="icofont icofont-link-alt"></i>
+        </div>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Emily_Guo.jpg">
+        <h4>Emily Guo</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sophie_Xi.jpg">
+        <h4>Sophie Xi</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sherry_Guo.jpg">
+        <h4>Xinning Guo</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Mindy_Ma.jpg">
+        <h4>Mindy Ma</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Lula_Chou.jpg">
+        <h4>Lula Chou</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Michelle_Cai.jpg">
+        <h4>Michelle Cai</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 3</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Tony Zheng</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
@@ -659,79 +635,69 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <img class="img-fluid" src="../assets/images/Danning_Tu.jpg">
+        <h4>Danning Tu</h4>
+        <h5>Vice Chair</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Yi_Yang.jpg">
+        <h4>Yi Yang</h4>
+        <h5>Vice Chair</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Ying_Chen.jpg">
+        <h4>Ying Chen</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>William Sun</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Clover Zhao</h4>
+        <h5>Volunteer</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Zhiyuan Liu</h4>
+        <h5>Volunteer</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Yixi Wang</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Lei_Wang.jpg">
+        <h4>Lei Wang</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Yijie Zhao</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Gaorui_Liu.jpg">
+        <h4>Gaorui Liu</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Wayne_Yang.jpg">
+        <h4>Wenyao Yang</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Wenhui Zhao</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 4</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Thomas Wang</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
@@ -739,84 +705,69 @@
   <div class="ourProfiles fade-in">
     <div class="row">
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <img class="img-fluid" src="../assets/images/Xiaoya_Song.jpg">
+        <h4>Sabrina Song</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Julia Chen</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Chelsie_Xu.jpg">
+        <h4>Chelsie Xu</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Lucy Sun</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
+        <h4>Claire Yu</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Yiting_Hua.jpg">
+        <h4>Ellen Hua</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Cynthia Li</h4>
+        <h5>Member</h5>
+      </div>
+    </div>
+  </div>
+  <!-- Page 6 -->
+  <div class="ourProfiles fade-in">
+    <div class="row">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <h4>Jeff Ding</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Grace Guo</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Jingxin Wang</h4>
+        <h5>Vice Chair</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <h4>Lingpei Zhou</h4>
+        <h5>Member</h5>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
-      </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
-        <h4>Da Ming 5</h4>
-        <h5>Director of Nothing</h5>
+        <img class="img-fluid" src="../assets/images/Carol_Zhou.jpeg">
+        <h4>Jinkang Zhou</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
