--- a/html/past-ch.html
+++ b/html/past-ch.html
@@ -210,19 +210,19 @@
 
     <div class="section-full header" id="section-0">
       <div class="left-square"></div>
-      <div class="sub-title">April.13th - 15th<br/>University of Pennsylvania</div>
+      <div class="sub-title">四月十三日——四月十五日<br/>宾夕法尼亚大学</div>
       <div class="vertical-sub-title mobile-hide">
-        A Summit that builds the bridge between us
+        让我们一起，构筑中美交流的桥梁
       </div>
       <div class="vertical-sub-title mobile-only">
-        To Build the Bridge Between Us
+        构筑中美交流的桥梁
       </div>
       <div class="page-caption black-shadow">
-         PAST <br/> SUMMITS
+         往届 <br/> 峰会
       </div>
       <div class="bottom-square">
         <div class="row">
-          <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
+          <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">立即购票</div>
           <div class="col-2 white-bg action-area">
             <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
@@ -267,59 +267,53 @@
           </div>
           <div class="row row-eq-height">
             <div class="col-4 speaker-name">章启月</div>
-            <div class="col-8 speaker-title"> Consulate General of China in New York<br/></div>
-            <div class="col-4 speaker-name">Shiyi Pan</div>
-            <div class="col-8 speaker-title"> Chairman of Soho China</div>
-            <div class="col-4 speaker-name">Jizhong Zhang</div>
-            <div class="col-8 speaker-title"> Chinese TV Producer</div>
-            <div class="col-4 speaker-name">Xin Zhou</div>
-            <div class="col-8 speaker-title"> Chairman of Ehouse Holdings</div>
-            <div class="col-4 speaker-name">Ning Li</div>
-            <div class="col-8 speaker-title"> Executive Director of Li Ning Co.</div>
-            <div class="col-4 speaker-name">Yiming Zhang</div>
-            <div class="col-8 speaker-title"> CEO of Toutiao</div>
+            <div class="col-8 speaker-title"> 中华人民共和国驻纽约总领事<br/></div>
+            <div class="col-4 speaker-name">潘石屹</div>
+            <div class="col-8 speaker-title"> SOHO中国董事长</div>
+            <div class="col-4 speaker-name">张纪中</div>
+            <div class="col-8 speaker-title">中央电视台制片人、导演和高级经济师</div>
+            <div class="col-4 speaker-name">周忻</div>
+            <div class="col-8 speaker-title">易居董事会主席</div>
+            <div class="col-4 speaker-name">李宁</div>
+            <div class="col-8 speaker-title">奥运冠军，李宁体育用品有限公司董事长</div>
+            <div class="col-4 speaker-name">张一鸣</div>
+            <div class="col-8 speaker-title">今日头条创始人董事长</div>
             <div class="col-4 speaker-name">Tad Smith</div>
-            <div class="col-8 speaker-title"> CEO of Sotheby’s</div>
-            <div class="col-4 speaker-name">Jiwu Wang</div>
-            <div class="col-8 speaker-title"> Board Director of Tuspark Holdings</div>
-            <div class="col-4 speaker-name">KaiJing Yan</div>
-            <div class="col-8 speaker-title"> Chairman of Tasly Pharmaceutical Group</div>
-            <div class="col-4 speaker-name">Ying Yu</div>
-            <div class="col-8 speaker-title"> VP of Poly Real Estate</div>
-            <div class="col-4 speaker-name">Jianzhong Fu</div>
-            <div class="col-8 speaker-title"> Co-founder of Geekhouse Capital</div>
-            <div class="col-4 speaker-name">Haiping Hu</div>
-            <div class="col-8 speaker-title"> Board Director of Shanshan Investment Holding Co LTD.</div>
-            <div class="col-4 speaker-name">Qiang Wang</div>
-            <div class="col-8 speaker-title"> Founder of ZhenFund</div>
-            <div class="col-4 speaker-name">Xu Chen</div>
-            <div class="col-8 speaker-title"> CEO of Bank of China USA</div>
-            <div class="col-4 speaker-name">Xiaojie Huang</div>
-            <div class="col-8 speaker-title"> Founding Partner of JD Investment</div>
-            <div class="col-4 speaker-name">Pinjue Che</div>
-            <div class="col-8 speaker-title"> Head of Data Committee of Alibaba</div>
-            <div class="col-4 speaker-name">Jian Sun</div>
-            <div class="col-8 speaker-title"> CEO of Homeinn Hotel Group</div>
-            <div class="col-4 speaker-name">Zuyu Ding</div>
-            <div class="col-8 speaker-title"> CEO of Ehouse China</div>
-            <div class="col-4 speaker-name">Zuyu Ding</div>
-            <div class="col-8 speaker-title">CEO of Ehouse China</div>
-            <div class="col-4 speaker-name">Theresa Tse</div>
-            <div class="col-8 speaker-title"> CEO of CP Pharmaceutical Group</div>
+            <div class="col-8 speaker-title">苏富比全球CEO，主席</div>
+            <div class="col-4 speaker-name">王济武</div>
+            <div class="col-8 speaker-title"> 启迪控股董事长</div>
+            <div class="col-4 speaker-name">闫凯境</div>
+            <div class="col-8 speaker-title">天士力制药集团股份有限公司董事长</div>
+            <div class="col-4 speaker-name">胡海平</div>
+            <div class="col-8 speaker-title"> 杉杉控股有限公司董事局主席</div>
+            <div class="col-4 speaker-name">王强</div>
+            <div class="col-8 speaker-title">真格基金创始人</div>
+            <div class="col-4 speaker-name">徐辰</div>
+            <div class="col-8 speaker-title"> 中美总商会会长、中国银行美国行长</div>
+            <div class="col-4 speaker-name">黄晓捷</div>
+            <div class="col-8 speaker-title"> 九鼎投资共同创始人兼总裁</div>
+            <div class="col-4 speaker-name">车品觉</div>
+            <div class="col-8 speaker-title">国信优易数据研究院院长，红杉资本中国基金专家合伙人</div>
+            <div class="col-4 speaker-name">孙坚</div>
+            <div class="col-8 speaker-title">如家酒店CEO</div>
+            <div class="col-4 speaker-name">丁祖昱</div>
+            <div class="col-8 speaker-title">易居CEO</div>
+            <div class="col-4 speaker-name">谢其润</div>
+            <div class="col-8 speaker-title">正大制药集团董事长</div>
             <div class="col-4 speaker-name">Lawton R. Burns</div>
-            <div class="col-8 speaker-title"> Chair of the Health Care Management Department</div>
+            <div class="col-8 speaker-title">沃顿健康管理和经济中心主任，生命科学与管理项目联合主任</div>
             <div class="col-4 speaker-name">Bruce Novich</div>
-            <div class="col-8 speaker-title"> Executive Vice President and General Management of Cellular Dynamics</div>
-            <div class="col-4 speaker-name">Xiaoyu Weng</div>
-            <div class="col-8 speaker-title"> Deputy Curator of Guggenheim Museum</div>
-            <div class="col-4 speaker-name">Xiongwen Lu</div>
-            <div class="col-8 speaker-title"> Dean of Management of Fudan University</div>
-            <div class="col-4 speaker-name">Linda He</div>
-            <div class="col-8 speaker-title"> President of Wailian Consulting</div>
-            <div class="col-4 speaker-name">Zheng Yan</div>
-            <div class="col-8 speaker-title"> Special Advisor to Columbia University Teacher College</div>
-            <div class="col-4 speaker-name">Huining Cao</div>
-            <div class="col-8 speaker-title"> Chair of Finance Department At CKGSB</div>
+            <div class="col-8 speaker-title">Cellular Dynamics International Corporation首席营业官</div>
+            <div class="col-4 speaker-name">翁笑雨</div>
+            <div class="col-8 speaker-title"> Guggenheim艺术基金会中国策展人</div>
+            <div class="col-4 speaker-name">陆雄文</div>
+            <div class="col-8 speaker-title">复旦大学管理学院院长，斯隆管理学院访问学者</div>
+            <div class="col-4 speaker-name">何梅</div>
+            <div class="col-8 speaker-title"> 外联出国顾问集团董事长， 阿拉善SEE生态协会上海中心副主席</div>
+            <div class="col-4 speaker-name">严正</div>
+            <div class="col-8 speaker-title"> 哥伦比亚大学教师学院院长特别顾问，纽约电影学院董事会主席</div>
+            <div class="col-4 speaker-name">曹辉宁</div>
+            <div class="col-8 speaker-title">长江商学院金融学教授，金融MBA学术主任，美国财务学会会员</div>
           </div>
         </div>
       </div>
@@ -349,8 +343,6 @@
             <div class="col-8 speaker-title">摩根大通中国区主席兼首席执行官</div>
             <div class="col-4 speaker-name">陈凯歌</div>
             <div class="col-8 speaker-title">著名导演</div>
-            <div class="col-4 speaker-name">Kennedy Xu</div>
-            <div class="col-8 speaker-title">Renowned writer and screenrighter</div>
             <div class="col-4 speaker-name">韩三平</div>
             <div class="col-8 speaker-title">前中国电影集团公司董事长兼总经理</div>
             <div class="col-4 speaker-name">Max Michael</div>
@@ -359,8 +351,6 @@
             <div class="col-8 speaker-title">北京 798 文化创意产业园创始人</div>
             <div class="col-4 speaker-name">林瀚</div>
             <div class="col-8 speaker-title">M WOODS 美术馆创始人</div>
-            <div class="col-4 speaker-name">Hang Chen</div>
-            <div class="col-8 speaker-title">President of China Cultural Industry Investment Fund Management co.</div>
             <div class="col-4 speaker-name">陈漫</div>
             <div class="col-8 speaker-title">国际时尚摄影师, 视觉艺术家</div>
             <div class="col-4 speaker-name">董功</div>
@@ -376,13 +366,12 @@
             <div class="col-4 speaker-name">Jay Coen Gilbert</div>
             <div class="col-8 speaker-title">B Lab 创始人，美国著名企业家、投资人</div>
             <div class="col-4 speaker-name">韩靖</div>
-            <div class="col-8 speaker-title">Deputy secretary general of the China Social Entrepreneur Foundation</div>
-            <div class="col-4 speaker-name">Fei Deng</div>
-            <div class="col-8 speaker-title">Editor in Chief of Phoenix Weekly and sponsor of Free Lunch for Children</div>
-            <div class="col-4 speaker-name">Ma Kam-wah</div>
-            <div class="col-8 speaker-title">Hong Kong "Justice of Peace"</div>
-            <div class="col-4 speaker-name">Wayne Silby</div>
-            <div class="col-8 speaker-title">Founder of Calvert Foundation</div>
+            <div class="col-8 speaker-title">友成企业家基金会副秘书长，新公益实践者</div>
+            <div class="col-4 speaker-name">邓飞</div>
+            <div class="col-8 speaker-title">前凤凰周刊记者部主任，知名公益人、社会企业家</div>
+            <div class="col-4 speaker-name">马锦华</div>
+            <div class="col-8 speaker-title">香港著名公益人，香港城市大学火焰计划执行总监，太平绅士</div>
+
 
 
           </div>
