--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -158,17 +158,17 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/2018pwcs/"><div class="navigation-action-btn">立即购票</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/html/home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/html/about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/html/panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/html/panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/html/past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="/home-ch" class="active-item">峰会主页</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about">关于我们</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">论坛板块</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">峰会日程</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past.html">往届峰会</a> </div>
           </div>
         </div>
         <div class="row center-txt">
